# masters-presearch

./: .gitignore  README.md  notes24_3.txt
coder/: untitled.prj  untitled_mex.mexa64
constant-swap/: notes.md
constant-swap/nsolv/: Dockerfile
constant-swap/rmutator/: 0_ex.smt2  1_ex.smt2  2_ex.smt2  3_ex.smt2  4_ex.smt2  5_ex.smt2  6_ex.smt2  7_ex.smt2  Cargo.toml  test.smt2
constant-swap/rmutator/src/: lib.rs
constant-swap/scratch/: curr.smt2
diff-matlab-compiler/driver/: driver.m  driver.m~
diff-matlab-compiler/driver/archived_bugs/: n2s7922073gcd.json  n2s7922073gcd.m  n2s7922073gcd_diff.txt  n3s790503gcd_SK_GHB.json  n3s790503gcd_SK_GHB.m  n3s790503gcd_SK_GHB_diff.txt
diff-matlab-compiler/driver/bugs/: n1s1576131foo.json  n1s6557407gcd.json  n1s6557407gcd_diff.txt  n1s8147237arabic2roman_diff.txt  n2s1576131foo.json  n2s1576131foo_diff.txt  n3s1576131foo.json  n3s8147237arabic2roman_diff.txt
diff-matlab-compiler/driver/matlab-example-functions/: BinaryIntervalSearch.m  arabic2roman.m  foo.m  gcd.m  gcd_SK_GHB.m
diff-matlab-compiler/driver/reduction/: gcd  gcd.m  readme.txt  reducer.hs  run_gcd.sh
diff-matlab-compiler/matlab-mutator/: Cargo.toml
diff-matlab-compiler/matlab-mutator/src/: lib.rs  main.rs
diff-matlab-compiler/matlab-mutator/tests/resources/: euclidean.m
driver/: driver.m  driver.m~
driver/matlab-example-functions/: magicsquare.m
manpage-nlp/data_raw/: curl.txt
type-testgen/my-project/: browse.txt  grammar.hs  grammar.info  grammar.y  minib.txt  my-project.cabal  temp
type-testgen/my-project/.stack-work/: stack.sqlite3
(+33 files in other folders)
