[package]
name = "matlab-mutator"
version = "0.1.0"
authors = ["wolffd <wolffdy0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
quickcheck = "0.9.2"
rand_xoshiro = "0.4.0"
rand = "0.7.3"
quickcheck_macros = "0.9.1"
regex = "1.3.4"
